# Wide

./: .gitignore  BENCH.md  Cargo.toml  GUIDE.en.md  GUIDE.ko.md  README.md
.github/workflows/: ci.yml  release.yml
bench/: fib.wide  floatloop.wide  loop.wide  matmul.wide  run.py
bench/native/: fib.c  fib.rs  floatloop.c  floatloop.rs  intloop.c  intloop.rs
examples/: algorithms.wide  borrow.wide  classes.wide  closures.wide  control.wide  fs.wide  functions.wide  hello.wide  io.wide  jit.wide  memory.wide  methods.wide  slices.wide  types.wide
examples/ai/: adam.wide  classify.wide  cnn.wide  conv.wide  gpu.wide  main.wide  ml.wide  mlp.wide  nn.wide  parallel.wide  reduce.wide  shapes.wide  softmax.wide  train.wide
examples/modules/: geometry.wide  main.wide  util.wide
examples/selfhost/: calc.wide  chars.wide  lexer.wide  main.wide  parser.wide
src/: ast.rs  bytecode.rs  check.rs  compile.rs  eval.rs  gpu.rs  jit.rs  lexer.rs  lib.rs  lumen.rs  main.rs  parser.rs  runtime.rs  span.rs  token.rs  value.rs  vm.rs
src/stdlib/: ml.wide
tests/: lang.rs
tests/modules/: app.wide  calc_check.wide  mathx.wide  shapes.wide
